package com.observer;

/**
 * 观察者
 *
 * @author huminxi https://github.com/huminxicn
 * @version on 2019/2/11 17:15
 */
public interface Observer {
    public void update();
}
